--- a/index.html
+++ b/index.html
@@ -41,12 +41,79 @@
           <button class="btnp">Explore more</button>
         </div>
      </section>
+     <section class="features display-flex">
+      <div>
+        <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <div class="feature-card">
+         <h4 class="feature-title">Dexktop & Mobile Version</h4>
+         <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+      </div>
+      <div class="feature-card">
+        <h4 class="feature-title">Dexktop & Mobile Version</h4>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+     </div>
+     <div class="feature-card">
+      <h4 class="feature-title">Dexktop & Mobile Version</h4>
+      <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+   </div>
+   <div class="feature-card">
+    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+ </div>
+      </div>
+      <div>
+        <img src="images/architect.png" alt="">
+        <button id="experience-badge">10+ year <span id="experience-year">Experience</span></button>
+      </div>
+     </section>
     <section>
       <h3 class="section-title">Some facts</h3>
-      <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
       <div class="facts-container">
-
+        <div class="fact-card display-flex">
+          <div>
+          <img src="images/icons/ribon.png" alt="" class="fact-icon">
+          <h4 class="fact-number">54</h4>
+          <h5 class="fact-name">Awards wining</h5>
+        </div>
+        </div>
+        <div class="fact-card display-flex">
+          <div>
+          <img src="images/icons/projects.png" alt="" class="fact-icon">
+          <h4 class="fact-number">1458</h4>
+          <h5 class="fact-name">Projects finished</h5>
+        </div>
+        </div>
+        <div class="fact-card display-flex">
+          <div>
+          <img src="images/icons/customers.png" alt="" class="fact-icon">
+          <h4 class="fact-number">590</h4>
+          <h5 class="fact-name">clients worked</h5>
+        </div>
+        </div>
+        <div class="fact-card display-flex">
+        <div>
+          <img src="images/icons/email.png" alt="" class="fact-icon">
+          <h4 class="fact-number">22578</h4>
+          <h5 class="fact-name">Email send</h5>
+        </div>
+        </div>
       </div>
+    </section>
+    <section class="our-sponsors">
+      <div class="sponsor-info">
+        <h3 class="section-title">our sponsors</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+      <div class="sponsor-companies">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+      </div>
+
     </section>
     </main>
     <footer>
