--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
  </div>
       </div>
-      <div>
+      <div class="feature-architact">
         <img src="images/architect.png" alt="">
-        <button id="experience-badge">10+ year <span id="experience-year">Experience</span></button>
+        <button id="experience-badge" class="btnp">10+ year <span id="experience-year">Experience</span></button>
       </div>
      </section>
     <section>
